# LepWordGame

./: CMakeLists.txt  abstract_presenter.h  bullet.h  coint.h  enemy.h  firstmenu.cpp  firstmenu.h  firstmenu.ui  hero.h  lepGame.pro  main.cpp  map.cpp  map.h  menu.h  model.cpp  model.h  presenter.cpp  presenter.h  resurs.qrc  road.cpp  road.h  trajectory.cpp  trajectory.h  view.cpp  view.h
